--- a/PreparationDonnees.ipynb
+++ b/PreparationDonnees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -37,11 +37,11 @@
      "output_type": "stream",
      "text": [
       "  EmployeeName   Latitude  Longitude     Skill  Level WorkingStartTime  \\\n",
-      "0     Valentin  45.151218  -0.822093  Oenology      2           8:00am   \n",
-      "1        Ambre  45.151218  -0.822093  Oenology      1           8:00am   \n",
+      "0     Valentin  45.151218  -0.822093  Oenology      2           7:00am   \n",
+      "1        Ambre  45.199575  -0.822093  Oenology      1           8:00am   \n",
       "\n",
       "  WorkingEndTime  \n",
-      "0         6:00pm  \n",
+      "0         5:00pm  \n",
       "1         6:00pm  \n"
      ]
     }
@@ -81,21 +81,21 @@
     "- EndTask[j] qui à une tâche j lui aussi la fin du créneau durant lequel on peut l'effectuer\n",
     "- DurationTask[j] qui à une tâche j lui associe sa durée\n",
     "- TasksUnavailabilities[j]\n",
-    "- EmployeesUnavailabilities[i]\n",
     "- DistDict[i][j] dictionnaire contenant les distances entre toutes les tâches et les domiciles des employées\n",
-    "- TimeDict[i][j] dictionnaire contenant les temps de trajet associés\n"
+    "- TimeDict[i][j] dictionnaire contenant les temps de trajet associés\n",
+    "- Unavailability[l]: recense les indisponibilités sous forme (employe, debutindispo, duree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{(1, 1): 51.08582563186022, (1, 2): 73.07201274303877, (2, 1): 73.07201274303877, (1, 3): 21.986445377956827, (3, 1): 21.986445377956827, (1, 4): 35.44986227176074, (4, 1): 35.44986227176074, (1, 5): 9.770684035139436, (5, 1): 9.770684035139436, (1, 6): 27.9731244554277, (6, 1): 27.9731244554277, (1, 7): 55.462492323540545, (7, 1): 55.462492323540545, (1, 8): 16.80595799156355, (8, 1): 16.80595799156355, (1, 9): 44.39323837943095, (9, 1): 44.39323837943095, (2, 0): 51.08582563186022, (0, 2): 51.08582563186022, (2, 2): 21.986445377956827, (2, 3): 35.44986227176074, (3, 2): 35.44986227176074, (2, 4): 13.727923891840074, (4, 2): 13.727923891840074, (2, 5): 12.229618059745944, (5, 2): 12.229618059745944, (2, 6): 6.226531118680221, (6, 2): 6.226531118680221, (2, 7): 33.550611767536175, (7, 2): 33.550611767536175, (2, 8): 14.596094595567248, (8, 2): 14.596094595567248, (2, 9): 22.900054062964234, (9, 2): 22.900054062964234, (3, 0): 73.07201274303877, (0, 3): 73.07201274303877, (3, 3): 13.727923891840074, (3, 4): 12.229618059745944, (4, 3): 12.229618059745944, (3, 5): 25.80307573955282, (5, 3): 25.80307573955282, (3, 6): 7.525182290349187, (6, 3): 7.525182290349187, (3, 7): 21.23156064635924, (7, 3): 21.23156064635924, (3, 8): 26.977999702476637, (8, 3): 26.977999702476637, (3, 9): 13.263766590153855, (9, 3): 13.263766590153855, (4, 0): 86.43689582031803, (0, 4): 86.43689582031803, (4, 4): 25.80307573955282, (4, 5): 7.525182290349187, (5, 4): 7.525182290349187, (4, 6): 18.290904926157204, (6, 4): 18.290904926157204, (4, 7): 45.695379184323556, (7, 4): 45.695379184323556, (4, 8): 11.12602735923821, (8, 4): 11.12602735923821, (4, 9): 34.700657239556016, (9, 4): 34.700657239556016, (5, 0): 60.85022584050592, (0, 5): 60.85022584050592, (5, 5): 18.290904926157204, (5, 6): 45.695379184323556, (6, 5): 45.695379184323556, (5, 7): 27.983513127167424, (7, 5): 27.983513127167424, (5, 8): 20.157625569255497, (8, 5): 20.157625569255497, (5, 9): 18.158817345220257, (9, 5): 18.158817345220257, (6, 0): 79.01448347385474, (0, 6): 79.01448347385474, (6, 6): 27.983513127167424, (6, 7): 20.157625569255497, (7, 6): 20.157625569255497, (6, 8): 43.44896207952715, (8, 6): 43.44896207952715, (6, 9): 11.889390079734241, (9, 6): 11.889390079734241, (7, 0): 106.49440243195107, (0, 7): 106.49440243195107, (7, 7): 43.44896207952715, (7, 8): 11.889390079734241, (8, 7): 11.889390079734241, (7, 9): 31.629215725739282, (9, 7): 31.629215725739282, (8, 0): 64.63419396251989, (0, 8): 64.63419396251989, (8, 8): 31.629215725739282, (8, 9): 6.447816294552511, (9, 8): 6.447816294552511, (9, 0): 95.20915557659883, (0, 9): 95.20915557659883, (9, 9): 25.63380162851713, (10, 0): 69.86608253808429, (0, 10): 69.86608253808429, (10, 1): 20.041414721024722, (1, 10): 20.041414721024722, (10, 2): 8.977900965062247, (2, 10): 8.977900965062247, (10, 3): 20.565350261248838, (3, 10): 20.565350261248838, (10, 4): 11.556855880100445, (4, 10): 11.556855880100445, (10, 5): 13.95221659716744, (5, 10): 13.95221659716744, (10, 6): 37.34378618786328, (6, 10): 37.34378618786328, (10, 7): 6.447816294552511, (7, 10): 6.447816294552511, (10, 8): 25.63380162851713, (8, 10): 25.63380162851713, (1, 'Valentin'): 77.08767138540115, ('Valentin', 1): 77.08767138540115, (1, 'Ambre'): 77.08767138540115, ('Ambre', 1): 77.08767138540115, (2, 'Valentin'): 26.425077792840028, ('Valentin', 2): 26.425077792840028, (2, 'Ambre'): 26.425077792840028, ('Ambre', 2): 26.425077792840028, (3, 'Valentin'): 6.932258158573093, ('Valentin', 3): 6.932258158573093, (3, 'Ambre'): 6.932258158573093, ('Ambre', 3): 6.932258158573093, (4, 'Valentin'): 13.231207873803186, ('Valentin', 4): 13.231207873803186, (4, 'Ambre'): 13.231207873803186, ('Ambre', 4): 13.231207873803186, (5, 'Valentin'): 16.907601110341744, ('Valentin', 5): 16.907601110341744, (5, 'Ambre'): 16.907601110341744, ('Ambre', 5): 16.907601110341744, (6, 'Valentin'): 8.01838999937322, ('Valentin', 6): 8.01838999937322, (6, 'Ambre'): 8.01838999937322, ('Ambre', 6): 8.01838999937322, (7, 'Valentin'): 29.654838265031998, ('Valentin', 7): 29.654838265031998, (7, 'Ambre'): 29.654838265031998, ('Ambre', 7): 29.654838265031998, (8, 'Valentin'): 14.251834594820755, ('Valentin', 8): 14.251834594820755, (8, 'Ambre'): 14.251834594820755, ('Ambre', 8): 14.251834594820755, (9, 'Valentin'): 18.12703177600984, ('Valentin', 9): 18.12703177600984, (9, 'Ambre'): 18.12703177600984, ('Ambre', 9): 18.12703177600984, (10, 'Valentin'): 7.855554481992101, ('Valentin', 10): 7.855554481992101, (10, 'Ambre'): 7.855554481992101, ('Ambre', 10): 7.855554481992101}\n"
+      "{0: ['Ambre', 12.0, 1.0]}\n"
      ]
     }
    ],
@@ -114,6 +114,14 @@
     "for i in range (len(Employees[\"EmployeeName\"])):\n",
     "    a = Employees[\"EmployeeName\"][i]\n",
     "    b = Employees[\"WorkingStartTime\"][i][:1]\n",
+    "    bg = b[:2]   #prend les deux premiers caractères\n",
+    "    bd = b[-3:]\n",
+    "    if bg[-1:] == \":\":  #cas où l'heure n'a qu'un chiffre\n",
+    "        b = int(b[:1]) + int(bd[:2]) *100/60\n",
+    "        \n",
+    "    if bg[-1:] != \":\":\n",
+    "        b = int(b[:2]) + int(bd[-2:]) *100/60\n",
+    "        \n",
     "    if Employees[\"WorkingStartTime\"][i][-2:] == 'am':\n",
     "        BeginningEmployee[a] = b\n",
     "    if Employees[\"WorkingStartTime\"][i][2:] == \"pm\":\n",
@@ -126,6 +134,14 @@
     "for i in range (len(Employees[\"EmployeeName\"])):\n",
     "    a = Employees[\"EmployeeName\"][i]\n",
     "    b = Employees[\"WorkingEndTime\"][i][:1]\n",
+    "    bg = b[:2]   #prend les deux premiers caractères\n",
+    "    bd = b[-3:]\n",
+    "    if bg[-1:] == \":\":  #cas où l'heure n'a qu'un chiffre\n",
+    "        b = int(b[:1]) + int(bd[:2]) *100/60\n",
+    "        \n",
+    "    if bg[-1:] != \":\":\n",
+    "        b = int(b[:2]) + int(bd[-2:]) *100/60\n",
+    "\n",
     "    if Employees[\"WorkingEndTime\"][i][-2:] == 'am':\n",
     "        EndEmployee[a] = b\n",
     "    if Employees[\"WorkingEndTime\"][i][2:] == \"pm\":\n",
@@ -146,7 +162,15 @@
     "\n",
     "for i in range (len(Tasks[\"TaskId\"])):\n",
     "    a = Tasks[\"TaskId\"][i]\n",
-    "    b = Tasks[\"OpeningTime\"][i][:1]\n",
+    "    b = Tasks[\"OpeningTime\"][i][:5]\n",
+    "    bg = b[:2]   #prend les deux premiers caractères\n",
+    "    bd = b[-3:]\n",
+    "    if bg[-1:] == \":\":  #cas où l'heure n'a qu'un chiffre\n",
+    "        b = int(b[:1]) + int(bd[:2]) *100/60\n",
+    "        \n",
+    "    if bg[-1:] != \":\":\n",
+    "        b = int(b[:2]) + int(bd[-2:]) *100/60\n",
+    "        \n",
     "    if Tasks[\"OpeningTime\"][i][-2:] == 'am':\n",
     "        BeginningTask[a] = b\n",
     "    if Tasks[\"OpeningTime\"][i][2:] == \"pm\":\n",
@@ -160,7 +184,15 @@
     "\n",
     "for i in range (len(Tasks[\"TaskId\"])):\n",
     "    a = Tasks[\"TaskId\"][i] \n",
-    "    b = Tasks[\"ClosingTime\"][i][:1]\n",
+    "    b = Tasks[\"ClosingTime\"][i][:5]\n",
+    "    bg = b[:2]   #prend les deux premiers caractères\n",
+    "    bd = b[-3:]\n",
+    "    if bg[-1:] == \":\":  #cas où l'heure n'a qu'un chiffre\n",
+    "        b = int(b[:1]) + int(bd[:2]) *100/60\n",
+    "        \n",
+    "    if bg[-1:] != \":\":\n",
+    "        b = int(b[:2]) + int(bd[-2:]) *100/60\n",
+    "\n",
     "    if Tasks[\"ClosingTime\"][i][-2:] == 'am':\n",
     "        EndTask[a] = b\n",
     "    if Tasks[\"ClosingTime\"][i][2:] == \"pm\":\n",
@@ -182,29 +214,62 @@
     "\n",
     "for i in range (len(Tasks_Unavailabilities[\"TaskId\"])):\n",
     "    a = Tasks_Unavailabilities[\"TaskId\"][i] \n",
-    "    b = Tasks_Unavailabilities[\"Start\"][i][:1]\n",
-    "    c = Tasks_Unavailabilities[\"End\"][i][:1]\n",
-    "    if Tasks_Unavailabilities[\"Start\"][i][-2:] == 'pm':\n",
+    "    b = Tasks_Unavailabilities[\"Start\"][i][:5]\n",
+    "    bg = b[:2]   #prend les deux premiers caractères\n",
+    "    bd = b[-3:]\n",
+    "    if bg[-1:] == \":\":  #cas où l'heure n'a qu'un chiffre\n",
+    "        b = int(b[:1]) + int(bd[:2]) *100/60\n",
+    "        \n",
+    "    if bg[-1:] != \":\":\n",
+    "        b = int(b[:2]) + int(bd[-2:]) *100/60\n",
+    "        \n",
+    "    c = Tasks_Unavailabilities[\"End\"][i][:5]\n",
+    "    cg = c[:2]   #prend les deux premiers caractères\n",
+    "    cd = c[-3:]\n",
+    "    if cg[-1:] == \":\":  #cas où l'heure n'a qu'un chiffre\n",
+    "        c = int(c[:1]) + int(cd[:2]) *100/60\n",
+    "        \n",
+    "    if cg[-1:] != \":\":\n",
+    "        c = int(c[:2]) + int(cd[-2:]) *100/60\n",
+    "\n",
+    "    if Tasks_Unavailabilities[\"Start\"][i][-2:] == 'pm' and b!=12:\n",
     "        b = b + 12\n",
-    "    if Tasks_Unavailabilities[\"End\"][i][2:] == \"pm\":\n",
+    "    if Tasks_Unavailabilities[\"End\"][i][2:] == \"pm\" and c!=12:\n",
     "        c = c + 12\n",
     "    TasksUnavailabilities[a] = [b,c]\n",
     "\n",
     "#print(TasksUnavailabilities)\n",
     "\n",
-    "EmployeessUnavailabilities = dict()\n",
+    "Unavailability = dict()\n",
     "\n",
     "for i in range (len(Employees_Unavailabilities[\"EmployeeName\"])):\n",
     "    a = Employees_Unavailabilities[\"EmployeeName\"][i] \n",
-    "    b = Employees_Unavailabilities[\"Start\"][i][:1]\n",
-    "    c = Employees_Unavailabilities[\"End\"][i][:1]\n",
-    "    if Employees_Unavailabilities[\"Start\"][i][-2:] == 'pm':\n",
-    "        b = b + 12\n",
-    "    if Employees_Unavailabilities[\"End\"][i][2:] == \"pm\":\n",
-    "        c = c + 12\n",
-    "    TasksUnavailabilities[a] = [b,c]\n",
+    "    b = Employees_Unavailabilities[\"Start\"][i][:5]\n",
+    "    bg = b[:2]   #prend les deux premiers caractères\n",
+    "    bd = b[-3:]\n",
+    "    if bg[-1:] == \":\":  #cas où l'heure n'a qu'un chiffre\n",
+    "        b = int(b[:1]) + int(bd[:2]) *100/60\n",
+    "        \n",
+    "    if bg[-1:] != \":\":\n",
+    "        b = int(b[:2]) + int(bd[-2:]) *100/60\n",
+    "        \n",
+    "    c = Employees_Unavailabilities[\"End\"][i][:5]\n",
+    "    cg = c[:2]   #prend les deux premiers caractères\n",
+    "    cd = c[-3:]\n",
+    "    if cg[-1:] == \":\":  #cas où l'heure n'a qu'un chiffre\n",
+    "        c = int(c[:1]) + int(cd[:2]) *100/60\n",
+    "        \n",
+    "    if cg[-1:] != \":\":\n",
+    "        c = int(c[:2]) + int(cd[-2:]) *100/60\n",
+    "    if Employees_Unavailabilities[\"Start\"][i][-2:] == 'pm'and b!=12:\n",
+    "        b = int(b) + 12\n",
+    "    if Employees_Unavailabilities[\"End\"][i][2:] == \"pm\" and c!=12:\n",
+    "        c = int(c) + 12 - b\n",
+    "    Unavailability[i] = [a,b,c]\n",
     "\n",
-    "#print(EmployeessUnavailabilities)\n",
+    "\n",
+    "\n",
+    "#print(Unavailability)\n",
     "\n",
     "\n",
     "##Création du dictionnaire des distances\n",
@@ -260,7 +325,8 @@
     "    t = element[1] / 50\n",
     "    TimeDict[element[0]] = t\n",
     "\n",
-    "#print(TimeDict)\n"
+    "#print(TimeDict)\n",
+    "\n"
    ]
   },
   {
