prepa data ok 1

--- a/PreparationDonnees.ipynb
+++ b/PreparationDonnees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -88,18 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: ['Ambre', 12.0, 1.0]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Paramètres\n",
+    "N = len(Employees[\"EmployeeName\"])\n",
+    "K = len(Tasks[\"TaskId\"])\n",
+    "L = len(Tasks_Unavailabilities[\"TaskId\"])\n",
+    "\n",
+    "\n",
+    "\n",
     "LevelEmployee = dict()\n",
     "\n",
     "for i in range (len(Employees[\"EmployeeName\"])):\n",
@@ -121,7 +120,7 @@
     "        \n",
     "    if bg[-1:] != \":\":\n",
     "        b = int(b[:2]) + int(bd[-2:]) *100/60\n",
-    "        \n",
+    "\n",
     "    if Employees[\"WorkingStartTime\"][i][-2:] == 'am':\n",
     "        BeginningEmployee[a] = b\n",
     "    if Employees[\"WorkingStartTime\"][i][2:] == \"pm\":\n",
@@ -200,16 +199,6 @@
     "\n",
     "#print(EndTask)\n",
     "\n",
-    "DurationTask = dict()\n",
-    "\n",
-    "for i in range (len(Tasks[\"TaskId\"])):\n",
-    "    a = i+1\n",
-    "    b = Tasks[\"TaskDuration\"][i] / 60\n",
-    "    DurationTask[a] = b\n",
-    "\n",
-    "#print(DurationTask)\n",
-    "\n",
-    "\n",
     "TasksUnavailabilities = dict()\n",
     "\n",
     "for i in range (len(Tasks_Unavailabilities[\"TaskId\"])):\n",
@@ -267,12 +256,29 @@
     "        c = int(c) + 12 - b\n",
     "    Unavailability[i] = [a,b,c]\n",
     "\n",
-    "\n",
-    "\n",
     "#print(Unavailability)\n",
     "\n",
     "\n",
+    "DurationTask = dict()\n",
+    "\n",
+    "for i in range (K):\n",
+    "    a = L + i + 1\n",
+    "    b = Tasks[\"TaskDuration\"][i] / 60\n",
+    "    DurationTask[a] = b\n",
+    "for i in range (L):\n",
+    "    a = i + 1\n",
+    "    b = Unavailability[i][2] / 60\n",
+    "    DurationTask[a] = b\n",
+    "for i in range (N):\n",
+    "    a = L + K + i + 1\n",
+    "    b = 0\n",
+    "    DurationTask[a] = b\n",
+    "    DurationTask[a+N] = b\n",
+    "\n",
+    "#print(DurationTask)\n",
+    "\n",
     "##Création du dictionnaire des distances\n",
+    "#DistDic: associe à (i,j) la distance entre les deux tâches\n",
     "\n",
     "DistDict = dict()\n",
     "R = 6371  #rayon de la Terre\n",
@@ -287,11 +293,11 @@
     "            A = np.sin((l_i-l_k)*np.pi/(2*180))**2\n",
     "            B = (np.sin((L_i-L_k)*np.pi/(2*180))**2)*np.cos(l_i*np.pi/180)*np.cos(l_k*np.pi/180)\n",
     "            d = 2*R*np.sqrt(A+B)\n",
-    "            DistDict[(i+1,k)] = d\n",
-    "            DistDict[(k,i+1)] = d\n",
+    "            DistDict[(L+i,L+k)] = d\n",
+    "            DistDict[(L+k,L+i)] = d\n",
     "\n",
-    "for i in range (len(Tasks[\"TaskId\"])):             #### ajout des disatnces tasks - domiciles des employés\n",
-    "    for k in range (len(Employees[\"EmployeeName\"])):\n",
+    "for i in range (K):             #### ajout des disatnces tasks - domiciles des employés\n",
+    "    for k in range (N):\n",
     "        L_i = Tasks[\"Longitude\"][i]\n",
     "        l_i = Tasks[\"Latitude\"][i]\n",
     "        L_E = Employees[\"Longitude\"][k]\n",
@@ -299,10 +305,12 @@
     "        A = np.sin((l_i-l_E)*np.pi/(2*180))**2\n",
     "        B = (np.sin((L_i-L_E)*np.pi/(2*180))**2)*np.cos(l_i*np.pi/180)*np.cos(l_E*np.pi/180)\n",
     "        d = 2*R*np.sqrt(A+B)\n",
-    "        DistDict[(i+1, Employees[\"EmployeeName\"][k])] = d \n",
-    "        DistDict[(Employees[\"EmployeeName\"][k], i+1)] = d       \n",
+    "        DistDict[(L+i+1, L+K+k+1) ] = d \n",
+    "        DistDict[(L+K+k+1, L+i+1)] = d \n",
+    "        DistDict[(L+i+1, L+K+N+k+1)] = d\n",
+    "        DistDict[(L+K+N+k+1,L+i+1)] = d       \n",
     "\n",
-    "for i in range (len(Tasks[\"TaskId\"])):\n",
+    "for i in range (len(Tasks[\"TaskId\"])):      #ona joute les distances entre les tâches et les indispos\n",
     "    for k in range (len(Employees_Unavailabilities[\"EmployeeName\"])):\n",
     "        L_i = Tasks[\"Longitude\"][i]\n",
     "        l_i = Tasks[\"Latitude\"][i]\n",
@@ -311,13 +319,15 @@
     "        A = np.sin((l_i-l_E)*np.pi/(2*180))**2\n",
     "        B = (np.sin((L_i-L_E)*np.pi/(2*180))**2)*np.cos(l_i*np.pi/180)*np.cos(l_E*np.pi/180)\n",
     "        d = 2*R*np.sqrt(A+B)\n",
-    "        C = Employees_Unavailabilities[\"EmployeeName\"][k] + \"U{}\".format(k)   ##############Revoir numerotation des unavailabilities employé pour les retrouver plus vite lors de l'optimisation\n",
-    "        DistDict[(i+1, C)] = d \n",
-    "        DistDict[(C, i+1)] = d    \n",
+    "        DistDict[(L+i, k+1)] = d #distance entre indispo k et tâche i\n",
+    "        DistDict[(k+1, L+i)] = d    \n",
     "\n",
     "#print(DistDict)\n",
     "\n",
     "##Création dictionnaire des temps de trajet\n",
+    "\n",
+    "# TimeDict : associe à un trajet (i,j) le temps de trajet\n",
+    "\n",
     "\n",
     "TimeDict = dict()\n",
     "\n",
