correction beginning end task

--- a/PreparationDonnees.ipynb
+++ b/PreparationDonnees.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -88,9 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 18.0, 2: 18.0, 3: 18.0, 4: 18.0, 5: 18.0, 6: 18.0, 7: 18.0, 8: 18.0, 9: 24.0, 10: 18.0, 11: 7.0, 12: 8.0, 13: 17.0, 14: 18.0}\n"
+     ]
+    }
+   ],
    "source": [
     "#Paramètres\n",
     "N = len(Employees[\"EmployeeName\"])\n",
@@ -157,48 +165,6 @@
     "\n",
     "#print(LevelTask)\n",
     "\n",
-    "BeginningTask = dict()\n",
-    "\n",
-    "for i in range (len(Tasks[\"TaskId\"])):\n",
-    "    a = Tasks[\"TaskId\"][i]\n",
-    "    b = Tasks[\"OpeningTime\"][i][:5]\n",
-    "    bg = b[:2]   #prend les deux premiers caractères\n",
-    "    bd = b[-3:]\n",
-    "    if bg[-1:] == \":\":  #cas où l'heure n'a qu'un chiffre\n",
-    "        b = int(b[:1]) + int(bd[:2]) *100/60\n",
-    "        \n",
-    "    if bg[-1:] != \":\":\n",
-    "        b = int(b[:2]) + int(bd[-2:]) *100/60\n",
-    "        \n",
-    "    if Tasks[\"OpeningTime\"][i][-2:] == 'am':\n",
-    "        BeginningTask[a] = b\n",
-    "    if Tasks[\"OpeningTime\"][i][2:] == \"pm\":\n",
-    "        BeginningTask[a] = b + 12\n",
-    "\n",
-    "\n",
-    "#print(BeginningTask)\n",
-    "\n",
-    "\n",
-    "EndTask = dict()\n",
-    "\n",
-    "for i in range (len(Tasks[\"TaskId\"])):\n",
-    "    a = Tasks[\"TaskId\"][i] \n",
-    "    b = Tasks[\"ClosingTime\"][i][:5]\n",
-    "    bg = b[:2]   #prend les deux premiers caractères\n",
-    "    bd = b[-3:]\n",
-    "    if bg[-1:] == \":\":  #cas où l'heure n'a qu'un chiffre\n",
-    "        b = int(b[:1]) + int(bd[:2]) *100/60\n",
-    "        \n",
-    "    if bg[-1:] != \":\":\n",
-    "        b = int(b[:2]) + int(bd[-2:]) *100/60\n",
-    "\n",
-    "    if Tasks[\"ClosingTime\"][i][-2:] == 'am':\n",
-    "        EndTask[a] = b\n",
-    "    if Tasks[\"ClosingTime\"][i][2:] == \"pm\":\n",
-    "        EndTask[a] = b + 12\n",
-    "\n",
-    "#print(EndTask)\n",
-    "\n",
     "TasksUnavailabilities = dict()\n",
     "\n",
     "for i in range (len(Tasks_Unavailabilities[\"TaskId\"])):\n",
@@ -259,6 +225,84 @@
     "#print(Unavailability)\n",
     "\n",
     "\n",
+    "BeginningTask = dict()\n",
+    "\n",
+    "for i in range (K+L+2*N): \n",
+    "    if i < L:\n",
+    "        a = Employees_Unavailabilities[\"EmployeeName\"][i]\n",
+    "        b = Employees_Unavailabilities[\"Start\"][i][:5]\n",
+    "        c = Employees_Unavailabilities[\"Start\"][i]\n",
+    "    if i >= L and i < L+K:\n",
+    "        a = Tasks[\"TaskId\"][i-L]\n",
+    "        b = Tasks[\"OpeningTime\"][i-L][:5]\n",
+    "        c = Tasks[\"OpeningTime\"][i-L]\n",
+    "    if i >= L+K and i < L+K+N:\n",
+    "        a = Employees[\"EmployeeName\"][i-L-K]\n",
+    "        b = Employees[\"WorkingStartTime\"][i-L-K][:5]\n",
+    "        c = Employees[\"WorkingStartTime\"][i-L-K]\n",
+    "    if i >= L+K+N:\n",
+    "        a = Employees[\"EmployeeName\"][i-L-K-N]\n",
+    "        b = Employees[\"WorkingEndTime\"][i-L-K-N][:5]\n",
+    "        c = Employees[\"WorkingEndTime\"][i-L-K-N]\n",
+    "    bg = b[:2]   #prend les deux premiers caractères\n",
+    "    bd = b[-3:]\n",
+    "    \n",
+    "    if bg[-1:] == \":\":  #cas où l'heure n'a qu'un chiffre\n",
+    "        b = int(b[:1]) + int(bd[:2]) *100/60\n",
+    "        \n",
+    "    if bg[-1:] != \":\":\n",
+    "        b = int(b[:2]) + int(bd[-2:]) *100/60\n",
+    "        \n",
+    "    if c[-2:] == 'am':\n",
+    "        #BeginningTask[a] = b\n",
+    "        BeginningTask[i+1] = b\n",
+    "    if c[-2:] == \"pm\":\n",
+    "        #BeginningTask[a] = b + 12\n",
+    "        BeginningTask[i+1] = b + 12\n",
+    "\n",
+    " \n",
+    "\n",
+    "#print(BeginningTask)\n",
+    "\n",
+    "\n",
+    "EndTask = dict()\n",
+    "\n",
+    "for i in range (K+L+2*N): \n",
+    "    if i < L:\n",
+    "        a = Employees_Unavailabilities[\"EmployeeName\"][i]\n",
+    "        b = Employees_Unavailabilities[\"End\"][i][:5]\n",
+    "        c = Employees_Unavailabilities[\"End\"][i]\n",
+    "    if i >= L and i < L+K:\n",
+    "        a = Tasks[\"TaskId\"][i-L]\n",
+    "        b = Tasks[\"ClosingTime\"][i-L][:5]\n",
+    "        c = Tasks[\"ClosingTime\"][i-L]\n",
+    "    if i >= L+K and i < L+K+N:\n",
+    "        a = Employees[\"EmployeeName\"][i-L-K]\n",
+    "        b = Employees[\"WorkingStartTime\"][i-L-K][:5]\n",
+    "        c = Employees[\"WorkingStartTime\"][i-L-K]\n",
+    "    if i >= L+K+N:\n",
+    "        a = Employees[\"EmployeeName\"][i-L-K-N]\n",
+    "        b = Employees[\"WorkingEndTime\"][i-L-K-N][:5]\n",
+    "        c = Employees[\"WorkingEndTime\"][i-L-K-N]\n",
+    "    bg = b[:2]   #prend les deux premiers caractères\n",
+    "    bd = b[-3:]\n",
+    "    \n",
+    "    if bg[-1:] == \":\":  #cas où l'heure n'a qu'un chiffre\n",
+    "        b = int(b[:1]) + int(bd[:2]) *100/60\n",
+    "        \n",
+    "    if bg[-1:] != \":\":\n",
+    "        b = int(b[:2]) + int(bd[-2:]) *100/60\n",
+    "        \n",
+    "    if c[-2:] == 'am':\n",
+    "        #EndTask[a] = b\n",
+    "        EndTask[i+1] = b\n",
+    "    if c[-2:] == \"pm\":\n",
+    "        #EndTask[a] = b + 12\n",
+    "        EndTask[i+1] = b + 12\n",
+    "\n",
+    "print(EndTask)\n",
+    "\n",
+    "\n",
     "DurationTask = dict()\n",
     "\n",
     "for i in range (K):\n",
@@ -293,8 +337,8 @@
     "            A = np.sin((l_i-l_k)*np.pi/(2*180))**2\n",
     "            B = (np.sin((L_i-L_k)*np.pi/(2*180))**2)*np.cos(l_i*np.pi/180)*np.cos(l_k*np.pi/180)\n",
     "            d = 2*R*np.sqrt(A+B)\n",
-    "            DistDict[(L+i,L+k)] = d\n",
-    "            DistDict[(L+k,L+i)] = d\n",
+    "            DistDict[(L+i+1,L+k+1)] = d\n",
+    "            DistDict[(L+k+1,L+i+1)] = d\n",
     "\n",
     "for i in range (K):             #### ajout des disatnces tasks - domiciles des employés\n",
     "    for k in range (N):\n",
@@ -319,14 +363,14 @@
     "        A = np.sin((l_i-l_E)*np.pi/(2*180))**2\n",
     "        B = (np.sin((L_i-L_E)*np.pi/(2*180))**2)*np.cos(l_i*np.pi/180)*np.cos(l_E*np.pi/180)\n",
     "        d = 2*R*np.sqrt(A+B)\n",
-    "        DistDict[(L+i, k+1)] = d #distance entre indispo k et tâche i\n",
-    "        DistDict[(k+1, L+i)] = d    \n",
+    "        DistDict[(L+i+1, k+1)] = d #distance entre indispo k et tâche i\n",
+    "        DistDict[(k+1, L+i+1)] = d    \n",
     "\n",
     "#print(DistDict)\n",
     "\n",
     "##Création dictionnaire des temps de trajet\n",
     "\n",
-    "# TimeDict : associe à un trajet (i,j) le temps de trajet\n",
+    "# TimeDict : associe à un trajet (i,j) le temps de trajet en h\n",
     "\n",
     "\n",
     "TimeDict = dict()\n",
