--- a/PreparationDonnees.ipynb
+++ b/PreparationDonnees.ipynb
@@ -88,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: 18.0, 2: 18.0, 3: 18.0, 4: 18.0, 5: 18.0, 6: 18.0, 7: 18.0, 8: 18.0, 9: 24.0, 10: 18.0, 11: 7.0, 12: 8.0, 13: 17.0, 14: 18.0}\n"
+      "{(1, 1): 0.0, (1, 2): 55.881241192073894, (1, 3): 79.98515242298852, (1, 4): 93.44559398440298, (1, 5): 66.72223630091695, (1, 6): 85.81526900220813, (1, 7): 118.02195632047493, (1, 8): 75.08452637125717, (1, 9): 106.82857904964196, (1, 10): 79.60531046871382, (1, 11): 86.58161111071013, (1, 12): 90.75400519133962, (1, 13): 86.58161111071013, (1, 14): 90.75400519133962, (2, 1): 55.881241192073894, (2, 2): 0.0, (2, 3): 24.104412560139636, (2, 4): 37.70494812210075, (2, 5): 10.852350067908482, (2, 6): 29.99438570218607, (2, 7): 62.23849318666195, (2, 8): 22.93586116195657, (2, 9): 51.361816377472024, (2, 10): 25.359991739004546, (2, 11): 31.310619280070686, (2, 12): 35.05589063463733, (2, 13): 31.310619280070686, (2, 14): 35.05589063463733, (3, 1): 79.98515242298852, (3, 2): 24.104412560139636, (3, 3): 0.0, (3, 4): 14.042626280784043, (3, 5): 13.272246504818561, (3, 6): 6.296951710297473, (3, 7): 38.24909813732715, (3, 8): 15.684842892925245, (3, 9): 27.914836235628954, (3, 10): 10.618754769911, (3, 11): 9.797852841437985, (3, 12): 11.544558554687248, (3, 13): 9.797852841437985, (3, 14): 11.544558554687248, (4, 1): 93.44559398440298, (4, 2): 37.70494812210076, (4, 3): 14.042626280784043, (4, 4): 0.0, (4, 5): 27.049589223053122, (4, 6): 7.79085537136842, (4, 7): 26.241146638971106, (4, 8): 27.11959592239075, (4, 9): 18.583668312904283, (4, 10): 20.742202957651013, (4, 11): 13.812727474247081, (4, 12): 9.15932154983635, (4, 13): 13.812727474247081, (4, 14): 9.15932154983635, (5, 1): 66.72223630091695, (5, 2): 10.852350067908482, (5, 3): 13.272246504818561, (5, 4): 27.049589223053122, (5, 5): 0.0, (5, 6): 19.280838119857666, (5, 7): 51.392668882332146, (5, 8): 15.570276000261021, (5, 9): 40.61869544228722, (5, 10): 15.832567883469471, (5, 11): 20.777060210104825, (5, 12): 24.254422544985204, (5, 13): 20.777060210104825, (5, 14): 24.254422544985204, (6, 1): 85.81526900220813, (6, 2): 29.99438570218607, (6, 3): 6.296951710297473, (6, 4): 7.79085537136842, (6, 5): 19.280838119857666, (6, 6): 0.0, (6, 7): 32.96947972731067, (6, 8): 20.72091768556333, (6, 9): 23.57099700785497, (6, 10): 14.731788806861447, (6, 11): 10.005355075311748, (6, 12): 8.438010221711007, (6, 13): 10.005355075311748, (6, 14): 8.438010221711007, (7, 1): 118.02195632047493, (7, 2): 62.23849318666195, (7, 3): 38.24909813732715, (7, 4): 26.241146638971106, (7, 5): 51.392668882332146, (7, 6): 32.96947972731068, (7, 7): 0.0, (7, 8): 45.23318330436701, (7, 9): 12.126745365361849, (7, 10): 39.433437012525616, (7, 11): 31.779821126404027, (7, 12): 27.27993433153627, (7, 13): 31.779821126404027, (7, 14): 27.27993433153627, (8, 1): 75.08452637125717, (8, 2): 22.93586116195657, (8, 3): 15.684842892925245, (8, 4): 27.119595922390747, (8, 5): 15.570276000261021, (8, 6): 20.72091768556333, (8, 7): 45.23318330436701, (8, 8): 0.0, (8, 9): 33.228966274431464, (8, 10): 6.447626674693352, (8, 11): 14.298496459708826, (8, 12): 19.648720775211782, (8, 13): 14.298496459708826, (8, 14): 19.648720775211782, (9, 1): 106.82857904964196, (9, 2): 51.361816377472024, (9, 3): 27.914836235628954, (9, 4): 18.583668312904283, (9, 5): 40.618695442287226, (9, 6): 23.57099700785497, (9, 7): 12.126745365361849, (9, 8): 33.228966274431464, (9, 9): 0.0, (9, 10): 27.615139744992707, (9, 11): 20.251617146048098, (9, 12): 16.42053396838209, (9, 13): 20.251617146048098, (9, 14): 16.42053396838209, (10, 1): 79.60531046871382, (10, 2): 25.359991739004546, (10, 3): 10.618754769911, (10, 4): 20.742202957651013, (10, 5): 15.832567883469471, (10, 6): 14.731788806861443, (10, 7): 39.433437012525616, (10, 8): 6.447626674693352, (10, 9): 27.615139744992707, (10, 10): 0.0, (10, 11): 7.953393370516952, (10, 12): 13.249920784295606, (10, 13): 7.953393370516952, (10, 14): 13.249920784295606, (11, 1): 86.58161111071013, (11, 2): 31.310619280070686, (11, 3): 9.797852841437985, (11, 4): 13.812727474247081, (11, 5): 20.777060210104825, (11, 6): 10.005355075311748, (11, 7): 31.779821126404027, (11, 8): 14.298496459708824, (11, 9): 20.251617146048098, (11, 10): 7.953393370516952, (11, 11): 0.0, (11, 12): 5.3764848808837975, (11, 13): 0.0, (11, 14): 5.3764848808837975, (12, 1): 90.75400519133962, (12, 2): 35.055890634637336, (12, 3): 11.544558554687248, (12, 4): 9.15932154983635, (12, 5): 24.254422544985204, (12, 6): 8.438010221711007, (12, 7): 27.27993433153627, (12, 8): 19.648720775211782, (12, 9): 16.42053396838209, (12, 10): 13.249920784295606, (12, 11): 5.3764848808837975, (12, 12): 0.0, (12, 13): 5.3764848808837975, (12, 14): 0.0, (13, 1): 86.58161111071013, (13, 2): 31.310619280070686, (13, 3): 9.797852841437985, (13, 4): 13.812727474247081, (13, 5): 20.777060210104825, (13, 6): 10.005355075311748, (13, 7): 31.779821126404027, (13, 8): 14.298496459708824, (13, 9): 20.251617146048098, (13, 10): 7.953393370516952, (13, 11): 0.0, (13, 12): 5.3764848808837975, (13, 13): 0.0, (13, 14): 5.3764848808837975, (14, 1): 90.75400519133962, (14, 2): 35.055890634637336, (14, 3): 11.544558554687248, (14, 4): 9.15932154983635, (14, 5): 24.254422544985204, (14, 6): 8.438010221711007, (14, 7): 27.27993433153627, (14, 8): 19.648720775211782, (14, 9): 16.42053396838209, (14, 10): 13.249920784295606, (14, 11): 5.3764848808837975, (14, 12): 0.0, (14, 13): 5.3764848808837975, (14, 14): 0.0}\n"
      ]
     }
    ],
@@ -112,7 +112,7 @@
     "for i in range (len(Employees[\"EmployeeName\"])):\n",
     "    a = Employees[\"EmployeeName\"][i]\n",
     "    b = Employees[\"Level\"][i]\n",
-    "    LevelEmployee[a] = b\n",
+    "    LevelEmployee[i+1] = b\n",
     "\n",
     "#print(LevelEmployee)\n",
     "\n",
@@ -300,7 +300,7 @@
     "        #EndTask[a] = b + 12\n",
     "        EndTask[i+1] = b + 12\n",
     "\n",
-    "print(EndTask)\n",
+    "#print(EndTask)\n",
     "\n",
     "\n",
     "DurationTask = dict()\n",
@@ -321,52 +321,45 @@
     "\n",
     "#print(DurationTask)\n",
     "\n",
+    "Position = dict()   # contient les positions des tâches indispo\n",
+    "\n",
+    "for i in range (L+K+2*N):\n",
+    "    if i < L:\n",
+    "        L_i = Tasks_Unavailabilities[\"Longitude\"][i]\n",
+    "        l_i = Tasks_Unavailabilities[\"Latitude\"][i]\n",
+    "    if i >= L and i < L+K:\n",
+    "        L_i = Tasks[\"Longitude\"][i-L]\n",
+    "        l_i = Tasks[\"Latitude\"][i-L]\n",
+    "    if i >= L+K and i < L+K+N:\n",
+    "        L_i = Employees[\"Longitude\"][i-L-K]\n",
+    "        l_i = Employees[\"Latitude\"][i-L-K]\n",
+    "    if i >= L+K+N :\n",
+    "        L_i = Employees[\"Longitude\"][i-L-K-N]\n",
+    "        l_i = Employees[\"Latitude\"][i-L-K-N]\n",
+    "    Position[i+1] = [l_i, L_i]\n",
+    "\n",
+    "        \n",
+    "\n",
+    "\n",
     "##Création du dictionnaire des distances\n",
     "#DistDic: associe à (i,j) la distance entre les deux tâches\n",
     "\n",
     "DistDict = dict()\n",
     "R = 6371  #rayon de la Terre\n",
     "\n",
-    "for i in range (len(Tasks[\"TaskId\"])):               ## ajout des distances entre tasks\n",
-    "    for k in range (len(Tasks[\"TaskId\"])):\n",
-    "        if k!=i:\n",
-    "            L_i = Tasks[\"Longitude\"][i]\n",
-    "            l_i = Tasks[\"Latitude\"][i]\n",
-    "            L_k = Tasks[\"Longitude\"][k]\n",
-    "            l_k = Tasks[\"Latitude\"][k]\n",
+    "for i in range (1,L+K+2*N+1):               ## ajout des distances entre tasks\n",
+    "    for k in range (1,L+K+2*N+1):\n",
+    "            L_i = Position[i][0]\n",
+    "            l_i = Position[i][1]\n",
+    "            L_k = Position[k][0]\n",
+    "            l_k = Position[k][1]\n",
     "            A = np.sin((l_i-l_k)*np.pi/(2*180))**2\n",
     "            B = (np.sin((L_i-L_k)*np.pi/(2*180))**2)*np.cos(l_i*np.pi/180)*np.cos(l_k*np.pi/180)\n",
     "            d = 2*R*np.sqrt(A+B)\n",
-    "            DistDict[(L+i+1,L+k+1)] = d\n",
-    "            DistDict[(L+k+1,L+i+1)] = d\n",
+    "            DistDict[(i,k)] = d\n",
     "\n",
-    "for i in range (K):             #### ajout des disatnces tasks - domiciles des employés\n",
-    "    for k in range (N):\n",
-    "        L_i = Tasks[\"Longitude\"][i]\n",
-    "        l_i = Tasks[\"Latitude\"][i]\n",
-    "        L_E = Employees[\"Longitude\"][k]\n",
-    "        l_E = Employees[\"Latitude\"][k]\n",
-    "        A = np.sin((l_i-l_E)*np.pi/(2*180))**2\n",
-    "        B = (np.sin((L_i-L_E)*np.pi/(2*180))**2)*np.cos(l_i*np.pi/180)*np.cos(l_E*np.pi/180)\n",
-    "        d = 2*R*np.sqrt(A+B)\n",
-    "        DistDict[(L+i+1, L+K+k+1) ] = d \n",
-    "        DistDict[(L+K+k+1, L+i+1)] = d \n",
-    "        DistDict[(L+i+1, L+K+N+k+1)] = d\n",
-    "        DistDict[(L+K+N+k+1,L+i+1)] = d       \n",
     "\n",
-    "for i in range (len(Tasks[\"TaskId\"])):      #ona joute les distances entre les tâches et les indispos\n",
-    "    for k in range (len(Employees_Unavailabilities[\"EmployeeName\"])):\n",
-    "        L_i = Tasks[\"Longitude\"][i]\n",
-    "        l_i = Tasks[\"Latitude\"][i]\n",
-    "        L_E = Employees[\"Longitude\"][k]\n",
-    "        l_E = Employees[\"Latitude\"][k]\n",
-    "        A = np.sin((l_i-l_E)*np.pi/(2*180))**2\n",
-    "        B = (np.sin((L_i-L_E)*np.pi/(2*180))**2)*np.cos(l_i*np.pi/180)*np.cos(l_E*np.pi/180)\n",
-    "        d = 2*R*np.sqrt(A+B)\n",
-    "        DistDict[(L+i+1, k+1)] = d #distance entre indispo k et tâche i\n",
-    "        DistDict[(k+1, L+i+1)] = d    \n",
-    "\n",
-    "#print(DistDict)\n",
+    "print(DistDict)\n",
     "\n",
     "##Création dictionnaire des temps de trajet\n",
     "\n",
